--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <h2 class="logo">Flyteer</h2>
         <nav class="navigation">
-            <a href="#" class="active">Stays</a>
+            <a href="#" class="active">Home</a>
+            <a href="#">Stays</a>
             <a href="#">Flight</a>
             <a href="#">Taxis</a>
             <a  onclick="signUp()" class="button">Register</a>
