adding the footer section

--- a/index.html
+++ b/index.html
@@ -35,36 +35,47 @@
     </section>
 
     <section class="sec">
-        <h2>Let's Book a Flight!</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolore voluptatem sapiente rerum molestias, dele
-            ctus adipisci tempore ipsam omnis, molestiae hic consequuntur facere deserunt accusantium ex veritatis esse quam at. 
-            Fugiat recusandae aliquam, molestiae eum quasi aperiam, quas maiores enim consequuntur fuga, sunt nesciunt voluptates nemo cum corporis ad autem cupiditate vitae quae architecto deserunt provident.
-            Laborum aperiam omnis nemo, culpa praesentium nisi. Ex dolorem adipisci delectus doloremque, perferendis, laborum sit est porro officiis in totam facere necessitatibus vel ab neque? Velit cumque quia
-            repudiandae laudantium architecto quo inventore nam neque ducimus ipsa, aspernatur fugit quidem recusandae ea voluptates, id quam! Accusantium rem numquam doloremque nisi voluptas consequuntur repellendus
-            molestiae eveniet et asperiores nostrum hic sint ex temporibus itaque consequatur ea minima dolorem fugiat obcaecati, libero ratione neque! Voluptatem, blanditiis!
-            <br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolore voluptatem sapiente rerum molestias, dele
-            ctus adipisci tempore ipsam omnis, molestiae hic consequuntur facere deserunt accusantium ex veritatis esse quam at. 
-            Fugiat recusandae aliquam, molestiae eum quasi aperiam, quas maiores enim consequuntur fuga, sunt nesciunt voluptates nemo cum corporis ad autem cupiditate vitae quae architecto deserunt provident.
-            Laborum aperiam omnis nemo, culpa praesentium nisi. Ex dolorem adipisci delectus doloremque, perferendis, laborum sit est porro officiis in totam facere necessitatibus vel ab neque? Velit cumque quia
-            repudiandae laudantium architecto quo inventore nam neque ducimus ipsa, aspernatur fugit quidem recusandae ea voluptates, id quam! Accusantium rem numquam doloremque nisi voluptas consequuntur repellendus
-            molestiae eveniet et asperiores nostrum hic sint ex temporibus itaque consequatur ea minima dolorem fugiat obcaecati, libero ratione neque! Voluptatem, blanditiis!
-            <br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolore voluptatem sapiente rerum molestias, dele
-            ctus adipisci tempore ipsam omnis, molestiae hic consequuntur facere deserunt accusantium ex veritatis esse quam at. 
-            Fugiat recusandae aliquam, molestiae eum quasi aperiam, quas maiores enim consequuntur fuga, sunt nesciunt voluptates nemo cum corporis ad autem cupiditate vitae quae architecto deserunt provident.
-            Laborum aperiam omnis nemo, culpa praesentium nisi. Ex dolorem adipisci delectus doloremque, perferendis, laborum sit est porro officiis in totam facere necessitatibus vel ab neque? Velit cumque quia
-            repudiandae laudantium architecto quo inventore nam neque ducimus ipsa, aspernatur fugit quidem recusandae ea voluptates, id quam! Accusantium rem numquam doloremque nisi voluptas consequuntur repellendus
-            molestiae eveniet et asperiores nostrum hic sint ex temporibus itaque consequatur ea minima dolorem fugiat obcaecati, libero ratione neque! Voluptatem, blanditiis!<br><br>
-        </p>
+        <h2>Let's Book a Trip!</h2>
+        <div class="box-container">
+            <div class="box">
+                <h3>Find your next stay</h3>
+                <button>Click here!</button>
+            </div>
+            <div class="box">
+                <h3>Search hundreds of flight sites at once.</h3>
+                <button>Click here!</button>
+            </div>
+            <div class="box">
+                <h3>Rent a Taxi for any kind of trip</h3>
+                <button>Click here!</button>
+            </div>
+        </div>
     </section>
+    
+    
     <script src="script.js" defer></script>
-    <script>
-        function toggleMenu() {
-            var navigation = document.querySelector('.navigation');
-            navigation.classList.toggle('active');
-        }
-    </script>
+
 </body>
+<!-- Footer Section -->
+<footer>
+    <div class="footer-container">
+        <h2 class="footer-logo">Flyteer</h2>
+        <div class="footer-icons">
+            <a href="#"><img src="Images/phone-icon.png" alt="Phone Icon"></a>
+            <a href="#"><img src="Images/instagram-icon.jpg" alt="Instagram Icon"></a>
+            <a href="#"><img src="Images/facebook-icon.png" alt="Facebook Icon"></a>
+            <a href="#"><img src="Images/google-icon.jpg" alt="Google Plus Icon"></a>
+            <a href="#"><img src="Images/youtube-icon.png" alt="YouTube Icon"></a>
+        </div>
+        <div class="footer-links">
+            <a href="#">About</a>
+            <a href="#">Contact Us</a>
+            <a href="#">Our Team</a>
+        </div>
+        <div class="footer-copyright">
+            <p>&copy; copyright. All rights reserved</p>
+        </div>
+    </div>
+</footer>
+
 </html>
