adding on html and css files

--- a/index.html
+++ b/index.html
@@ -3,21 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>taxis</title>
+    <title>Taxis</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h2 class="logo">Flyteer</h2>
         <nav class="navigation">
-            <a href="#" >Home</a>
+            <a href="#">Home</a>
             <a href="#">Stays</a>
             <a href="#">Flight</a>
             <a href="#" class="active">Taxis</a>
-            <a  onclick="signUp()" class="button">Register</a>
-            <a  onclick="signIn()" class="button">Sign in</a>
-        </nav>   
+            <a onclick="signUp()" class="button">Register</a>
+            <a onclick="signIn()" class="button">Sign in</a>
+        </nav>
         <div class="menu-toggle" onclick="toggleMenu()"></div>
     </header>
+
+    <main>
+        <section class="search-section">
+            <h2>Taxi rentals for any kind of trip</h2>
+            <h3>Great Taxis at great prices from the biggest Taxis companies</h3>
+            <form class="search-form">
+                <div class="form-group">
+                    <label for="pickup-location"><img src="pickup-icon.png" alt="Pickup Icon"> Pick-up location</label>
+                    <input type="text" id="pickup-location" placeholder="Enter location">
+                </div>
+                <div class="form-group">
+                    <label for="destination"><img src="destination-icon.png" alt="Destination Icon"> Where-to-go?</label>
+                    <input type="text" id="destination" placeholder="Enter destination">
+                </div>
+                <div class="form-group">
+                    <label for="pickup-date"><img src="date-icon.png" alt="Date Icon"> Pick-up date</label>
+                    <input type="date" id="pickup-date">
+                </div>
+                <div class="form-group">
+                    <label for="pickup-time"><img src="time-icon.png" alt="Time Icon"> Time</label>
+                    <input type="time" id="pickup-time">
+                </div>
+                <button type="submit" class="search-button">Search</button>
+            </form>
+        </section>
+
+        <section class="results-section">
+            <div class="taxi-card">
+                <img src="taxi-image.png" alt="Taxi Image">
+                <div class="taxi-info">
+                    <div class="info-group">Location: Beirut</div>
+                    <div class="info-group">Company: 4 you taxi</div>
+                    <div class="info-group">Destination: Jounieh</div>
+                    <div class="info-group">Date and Time: Wed, Jul 17 at 10:00 AM</div>
+                    <div class="info-group">Price: $20</div>
+                    <button class="view-deal">View Deal</button>
+                </div>
+            </div>
+            <div class="taxi-card">
+                <img src="taxi-image.png" alt="Taxi Image">
+                <div class="taxi-info">
+                    <div class="info-group">Location: Beirut</div>
+                    <div class="info-group">Company: 4 you taxi</div>
+                    <div class="info-group">Destination: Jounieh</div>
+                    <div class="info-group">Date and Time: Wed, Jul 17 at 11:00 AM</div>
+                    <div class="info-group">Price: $36</div>
+                    <button class="view-deal">View Deal</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
