adding in the html and css files

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <h3>Great Taxis at great prices from the biggest Taxis companies</h3>
             <form class="search-form">
                 <div class="form-group">
-                    <label for="pickup-location"><img src="pickup-icon.png" alt="Pickup Icon"> Pick-up location</label>
+                    <label for="pickup-location"><img src="Images/pickup-icon.png" alt="Pickup Icon"> Pick-up location</label>
                     <input type="text" id="pickup-location" placeholder="Enter location">
                 </div>
                 <div class="form-group">
-                    <label for="destination"><img src="destination-icon.png" alt="Destination Icon"> Where-to-go?</label>
+                    <label for="destination"><img src="Images/pickup-icon.png" alt="Destination Icon"> Where-to-go?</label>
                     <input type="text" id="destination" placeholder="Enter destination">
                 </div>
                 <div class="form-group">
-                    <label for="pickup-date"><img src="date-icon.png" alt="Date Icon"> Pick-up date</label>
+                    <label for="pickup-date"><img src="Images/date-icon.png" alt="Date Icon"> Pick-up date</label>
                     <input type="date" id="pickup-date">
                 </div>
                 <div class="form-group">
-                    <label for="pickup-time"><img src="time-icon.png" alt="Time Icon"> Time</label>
+                    <label for="pickup-time"><img src="Images/time.jpg" alt="Time Icon"> Time</label>
                     <input type="time" id="pickup-time">
                 </div>
                 <button type="submit" class="search-button">Search</button>
@@ -47,24 +47,34 @@
 
         <section class="results-section">
             <div class="taxi-card">
-                <img src="taxi-image.png" alt="Taxi Image">
+                <img src="Images/taxi-image.png" alt="Taxi Image">
                 <div class="taxi-info">
-                    <div class="info-group">Location: Beirut</div>
-                    <div class="info-group">Company: 4 you taxi</div>
-                    <div class="info-group">Destination: Jounieh</div>
-                    <div class="info-group">Date and Time: Wed, Jul 17 at 10:00 AM</div>
-                    <div class="info-group">Price: $20</div>
+                    <div class="info-group">Location</div>
+                    <div class="info-group">Company</div>
+                    <div class="info-group">Destination</div>
+                    <div class="info-group">Date and Time</div>
+                    <div class="info-group">Price</div>
+                    <div class="info-group">Beirut</div>
+                    <div class="info-group">4 you taxi</div>
+                    <div class="info-group">Jounieh</div>
+                    <div class="info-group">Wed, Jul 17 at 10:00 AM</div>
+                    <div class="info-group">$20</div>
                     <button class="view-deal">View Deal</button>
                 </div>
             </div>
             <div class="taxi-card">
-                <img src="taxi-image.png" alt="Taxi Image">
+                <img src="Images/taxi-image.png" alt="Taxi Image">
                 <div class="taxi-info">
-                    <div class="info-group">Location: Beirut</div>
-                    <div class="info-group">Company: 4 you taxi</div>
-                    <div class="info-group">Destination: Jounieh</div>
-                    <div class="info-group">Date and Time: Wed, Jul 17 at 11:00 AM</div>
-                    <div class="info-group">Price: $36</div>
+                    <div class="info-group">Location</div>
+                    <div class="info-group">Company</div>
+                    <div class="info-group">Destination</div>
+                    <div class="info-group">Date and Time</div>
+                    <div class="info-group">Price</div>
+                    <div class="info-group">Beirut</div>
+                    <div class="info-group">4 you taxi</div>
+                    <div class="info-group">Jounieh</div>
+                    <div class="info-group">Wed, Jul 17 at 11:00 AM</div>
+                    <div class="info-group">$36</div>
                     <button class="view-deal">View Deal</button>
                 </div>
             </div>
