--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -52,7 +52,7 @@
         </li>
         <li>
           <a href="landing_page.html"
-            ><i class="fa-solid fa-book"></i> Logout</a
+            ><i class="fa-solid fa-sign-out-alt"></i> Logout</a
           >
         </li>
       </ul>
