--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -131,6 +131,49 @@
       </div>
     </div>
 
+    <div id="updateModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Update Taxi Company</h2>
+        <form id="updateCompanyForm">
+          <input type="hidden" id="updateCompanyId" name="companyId" />
+          <label for="updateCompanyName">Company Name:</label>
+          <input
+            type="text"
+            id="updateCompanyName"
+            name="companyName"
+            required
+          /><br />
+          <label for="updateCompanyNumber">Company Number:</label>
+          <input
+            type="text"
+            id="updateCompanyNumber"
+            name="companyNumber"
+            required
+          /><br />
+          <label for="updateCompanyEmail">Company Email:</label>
+          <input
+            type="email"
+            id="updateCompanyEmail"
+            name="companyEmail"
+            required
+          /><br />
+          <label for="updateCompanyAddress">Company Address:</label>
+          <input
+            type="text"
+            id="updateCompanyAddress"
+            name="companyAddress"
+            required
+          /><br />
+          <div class="modalBtn">
+            <button type="submit" class="main-btn modalBtn">
+              Update Taxi Company
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <script src="../../scripts/admin.js"></script>
   </body>
 </html>
