--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Taxi Booking</title>
 </head>
 <body>
-    
+    <header>
+        <h2 class="logo">Flyteer</h2>
+        <nav class="navigation">
+            <a href="#" >Home</a>
+            <a href="#">Stays</a>
+            <a href="#">Flight</a>
+            <a href="#" class="active">Taxis</a>
+            <a  onclick="signUp()" class="button">Register</a>
+            <a  onclick="signIn()" class="button">Sign in</a>
+        </nav>   
+        <div class="menu-toggle" onclick="toggleMenu()"></div>
+    </header>
 </body>
 </html>
