--- a/index.html
+++ b/index.html
@@ -14,10 +14,29 @@
             <a href="#">Stays</a>
             <a href="#">Flight</a>
             <a href="#" class="active">Taxis</a>
-            <a  onclick="signUp()" class="button">Register</a>
-            <a  onclick="signIn()" class="button">Sign in</a>
+            <a onclick="signUp()" class="button">Register</a>
+            <a onclick="signIn()" class="button">Sign in</a>
         </nav>   
         <div class="menu-toggle" onclick="toggleMenu()"></div>
     </header>
+
+    <main>
+        <section class="deal-section">
+            <h2>View deal</h2>
+            <div class="deal-content">
+                <img src="Images/taxi-image.png" alt="Taxi Image" class="taxi-image">
+                <div class="deal-info">
+                    <h3>Nissan Sunny <span class="car-color">white</span></h3>
+                    <p><img src="Images/driver.jpg" alt="User Icon"> Bakri dib</p>
+                    <p><img src="Images/location.png" alt="Location Icon"> From: Beirut</p>
+                    <p><img src="Images/location.png" alt="Destination Icon"> To: Jounieh</p>
+                    <p><img src="Images/company.png" alt="Company Icon"> 4 you taxi</p>
+                    <p><img src="Images/calendar.png" alt="Calendar Icon"> wed, jul 17 at 10:00 AM</p>
+                    <p><img src="Images/price.png" alt="Price Icon"> 20$</p>
+                    <button class="checkout-button">Go to checkout</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
