cleaning the code

--- a/checkout.html
+++ b/checkout.html
@@ -6,52 +6,57 @@
     <title>Checkout</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
-    <h2 class="logo">Flyteer</h2>
-    <nav class="navigation">
-        <a href="#">Home</a>
-        <a href="#">Stays</a>
-        <a href="#">Flight</a>
-        <a href="#" class="active">Taxis</a>
-        <a onclick="signUp()" class="button">Register</a>
-        <a onclick="signIn()" class="button">Sign in</a>
-    </nav>
-    <div class="menu-toggle" onclick="toggleMenu()"></div>
-</header>
-<main>
-    <section class="checkout-section">
-        <h2>Checkout</h2>
-        <form class="checkout-form">
-            <input type="text" placeholder="First Name" required>
-            <input type="text" placeholder="Last Name" required>
-            <input type="email" placeholder="Email" required>
-            <input type="tel" placeholder="Phone Number" required>
-            <button type="submit">Confirm</button>
-        </form>
-    </section>
-</main>
 <body>
-    
-</body>
+    <header>
+        <h2 class="logo">Flyteer</h2>
+        <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">Stays</a>
+            <a href="#">Flight</a>
+            <a href="#" class="active">Taxis</a>
+            <a onclick="signUp()" class="button">Register</a>
+            <a onclick="signIn()" class="button">Sign in</a>
+        </nav>
+        <div class="menu-toggle" onclick="toggleMenu()"></div>
+    </header>
+    <main>
+        <section class="checkout-section">
+            <h2>Checkout</h2>
+            <form class="checkout-form" onsubmit="handleSubmit(event)">
+                <input type="text" placeholder="First Name" required>
+                <input type="text" placeholder="Last Name" required>
+                <input type="email" placeholder="Email" required>
+                <input type="tel" placeholder="Phone Number" required>
+                <button type="submit">Confirm</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <h2 class="footer-logo">Flyteer</h2>
+            <div class="footer-icons">
+                <a href="#"><img src="Images/phone-icon.png" alt="Phone Icon"></a>
+                <a href="#"><img src="Images/instagram-icon.jpg" alt="Instagram Icon"></a>
+                <a href="#"><img src="Images/facebook-icon.png" alt="Facebook Icon"></a>
+                <a href="#"><img src="Images/google-icon.jpg" alt="Google Plus Icon"></a>
+                <a href="#"><img src="Images/youtube-icon.png" alt="YouTube Icon"></a>
+            </div>
+            <div class="footer-links">
+                <a href="#">About</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Our Team</a>
+            </div>
+            <div class="footer-copyright">
+                <p>&copy; copyright. All rights reserved</p>
+            </div>
+        </div>
+    </footer>
 
-<footer>
-    <div class="footer-container">
-        <h2 class="footer-logo">Flyteer</h2>
-        <div class="footer-icons">
-            <a href="#"><img src="Images/phone-icon.png" alt="Phone Icon"></a>
-            <a href="#"><img src="Images/instagram-icon.jpg" alt="Instagram Icon"></a>
-            <a href="#"><img src="Images/facebook-icon.png" alt="Facebook Icon"></a>
-            <a href="#"><img src="Images/google-icon.jpg" alt="Google Plus Icon"></a>
-            <a href="#"><img src="Images/youtube-icon.png" alt="YouTube Icon"></a>
-        </div>
-        <div class="footer-links">
-            <a href="#">About</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Our Team</a>
-        </div>
-        <div class="footer-copyright">
-            <p>&copy; copyright. All rights reserved</p>
-        </div>
-    </div>
-</footer>
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevent the form from submitting
+            alert('Your taxi is booked!');
+        }
+    </script>
+</body>
 </html>
