changing the file name

--- a/pages/taxi_booking/taxibooking.html
+++ b/pages/taxi_booking/taxibooking.html
@@ -10,7 +10,7 @@
     <header>
         <h2 class="logo">Flyteer</h2>
         <nav class="navigation">
-            <a href="#" >Home</a>
+            <a href="#" onclick="location.href='index.html'" >Home</a>
             <a href="#">Stays</a>
             <a href="#">Flight</a>
             <a href="#" class="active">Taxis</a>
