Added JWT token decoding and validation in admin.js, and updated login.js to store JWT token in local storage and redirect to admin/dashboard based on user role.

--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -13,6 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
     <title>Flyteer Admin Panel</title>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
