--- a/pages/taxi/taxi.html
+++ b/pages/taxi/taxi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taxis</title>
-    <link rel="stylesheet" href="taxi.css">
+    <link rel="stylesheet" href="/styles/taxi.css">
 </head>
 <body>
     <header>
