--- a/pages/taxi_booking/taxibooking.html
+++ b/pages/taxi_booking/taxibooking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taxi Booking</title>
-    <link rel="stylesheet" href="taxibooking.css">
+    <link rel="stylesheet" href="/styles/taxibooking.css">
 </head>
 <body>
     <header>
@@ -24,15 +24,15 @@
         <section class="deal-section">
             <h2>View deal</h2>
             <div class="deal-content">
-                <img src="Images/taxi-image.png" alt="Taxi Image" class="taxi-image">
+                <img src="/Images/taxi-image.png" alt="Taxi Image" class="taxi-image">
                 <div class="deal-info">
                     <h3>Nissan Sunny <span class="car-color">white</span></h3>
-                    <p><img src="Images/driver.jpg" alt="User Icon"> Bakri dib</p>
-                    <p><img src="Images/location.png" alt="Location Icon"> From: Beirut</p>
-                    <p><img src="Images/location.png" alt="Destination Icon"> To: Jounieh</p>
-                    <p><img src="Images/company.png" alt="Company Icon"> 4 you taxi</p>
-                    <p><img src="Images/calendar.png" alt="Calendar Icon"> wed, jul 17 at 10:00 AM</p>
-                    <p><img src="Images/price.png" alt="Price Icon"> 20$</p>
+                    <p><img src="/Images/driver.jpg" alt="User Icon"> Bakri dib</p>
+                    <p><img src="/Images/location.png" alt="Location Icon"> From: Beirut</p>
+                    <p><img src="/Images/location.png" alt="Destination Icon"> To: Jounieh</p>
+                    <p><img src="/Images/company.png" alt="Company Icon"> 4 you taxi</p>
+                    <p><img src="/Images/calendar.png" alt="Calendar Icon"> wed, jul 17 at 10:00 AM</p>
+                    <p><img src="/Images/price.png" alt="Price Icon"> 20$</p>
                     <button class="checkout-button" onclick="goToCheckout()">Go to checkout</button>
                 </div>
             </div>
