--- a/pages/taxi_booking/checkout.html
+++ b/pages/taxi_booking/checkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
-    <link rel="stylesheet" href="taxibooking.css">
+    <link rel="stylesheet" href="/styles/taxibooking.css">
 </head>
 <body>
     <header>
