--- a/pages/hotel_booking/hotel_booking_filter.html
+++ b/pages/hotel_booking/hotel_booking_filter.html
@@ -31,8 +31,8 @@
 
     </form>
 
-    <div class="Filter_container">
-        
+    <div class="filter_container">
+
     </div>
 
 </main>
@@ -58,6 +58,7 @@
         </div>
     </footer>
 
-    <script src="../../scripts/booking_hotel/main.js" type="module"></script>
+    <!-- <script src="../../scripts/booking_hotel/create.js"></script> -->
+    <script  type="module" src="../../scripts/booking_hotel/main.js" ></script>
 </body>
 </html>
