fixing code for js

--- a/pages/flight_booking_pages/flight_booking_main.html
+++ b/pages/flight_booking_pages/flight_booking_main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/flyteer_frontend/node_modules/axios/dist/axios.min.js"></script>
     <title>Flights Main Page</title>
     <link rel="stylesheet" href="/flyteer_frontend/styles/flight_booking_styles/flight_booking_styles.css">
     
@@ -78,8 +78,8 @@
 <script type="module" src="/flyteer_frontend/scripts/flight_scripts/getFlights.js"></script>
 <script type="module" src="/flyteer_frontend/scripts/flight_scripts/update.js"></script>
 
-<script src="/flyteer_frontend/scripts/flight_booking_scripts/flightBookingMain.js"></script>
-<script src="/flyteer_frontend/scripts/flight_scripts/flightMain.js"></script>
+<script type="module" src="/flyteer_frontend/scripts/flight_booking_scripts/flightBookingMain.js"></script>
+<script type="module" src="/flyteer_frontend/scripts/flight_scripts/flightMain.js"></script>
 
 
 </body>
