added pages and fixed erros

--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -22,12 +22,12 @@
       <h1>Flyteer Admin Panel</h1>
       <ul class="container">
         <li>
-          <a href="taxi_management.html"
+          <a href="admin.html"
             ><i class="fa-solid fa-taxi"></i> Taxi Management</a
           >
         </li>
         <li>
-          <a href="taxi_cars_management.html"
+          <a href="taxiCarsManagement.html"
             ><i class="fa-solid fa-car"></i> Taxi Cars Management</a
           >
         </li>
