--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -52,7 +52,7 @@
           >
         </li>
         <li>
-          <a href="landing_page.html"
+          <a href="#" id="logoutBtn"
             ><i class="fa-solid fa-sign-out-alt"></i> Logout</a
           >
         </li>
@@ -62,7 +62,7 @@
       <h2>Taxi Company Management</h2>
       <p class="buttonP">
         Add a new taxi company:
-        <button class="main-btn" id="createBtn">Add here!</button>
+        <button class="main-btn" id="createBtn">Add here</button>
       </p>
       <table>
         <thead>
