--- a/pages/admin/taxiCarsManagement.html
+++ b/pages/admin/taxiCarsManagement.html
@@ -58,7 +58,7 @@
           >
         </li>
         <li>
-          <a href="landing_page.html"
+          <a href="#" id="logoutBtn"
             ><i class="fa-solid fa-sign-out-alt"></i> Logout</a
           >
         </li>
@@ -69,7 +69,7 @@
         <h2>Taxi Management</h2>
         <p class="buttonP">
           Add a new taxi:
-          <button class="main-btn" id="createBtn">Add here!</button>
+          <button class="main-btn" id="createBtn">Add here</button>
         </p>
         <table>
           <thead>
