adding all the js realted to taxi

--- a/pages/hotel_booking/hotel_booking_filter.html
+++ b/pages/hotel_booking/hotel_booking_filter.html
@@ -11,10 +11,10 @@
     <header>
         <h2 class="logo">Flyteer</h2>
         <nav class="navigation">
-            <a href="#" class="active">Home</a>
-            <a href="#">Stays</a>
+            <a href="#"  onclick="location.href='../home/index.html'">Home</a>
+            <a href="#" class="active">Stays</a>
             <a href="#">Flight</a>
-            <a href="#">Taxis</a>
+            <a href="#" onclick="location.href='../home/index.html'">Taxis</a>
             <a  onclick="signUp()" class="button">Register</a>
             <a  onclick="signIn()" class="button">Sign in</a>
         </nav>   
