--- a/pages/taxi_booking/checkout.html
+++ b/pages/taxi_booking/checkout.html
@@ -10,8 +10,8 @@
     <header>
         <h2 class="logo">Flyteer</h2>
         <nav class="navigation">
-            <a href="#" onclick="location.href='index.html'">Home</a>
-            <a href="#">Stays</a>
+            <a href="#" onclick="location.href='../home/index.html'">Home</a>
+            <a href="#" onclick="location.href='../hotel_booking/hotel_booking_filter.html'">Stays</a>
             <a href="#">Flight</a>
             <a href="#" class="active">Taxis</a>
             <a onclick="signUp()" class="button">Register</a>
@@ -35,11 +35,11 @@
         <div class="footer-container">
             <h2 class="footer-logo">Flyteer</h2>
             <div class="footer-icons">
-                <a href="#"><img src="Images/phone-icon.png" alt="Phone Icon"></a>
-                <a href="#"><img src="Images/instagram-icon.jpg" alt="Instagram Icon"></a>
-                <a href="#"><img src="Images/facebook-icon.png" alt="Facebook Icon"></a>
-                <a href="#"><img src="Images/google-icon.jpg" alt="Google Plus Icon"></a>
-                <a href="#"><img src="Images/youtube-icon.png" alt="YouTube Icon"></a>
+                <a href="#"><img src="../../Images/phone-icon.png" alt="Phone Icon"></a>
+                <a href="#"><img src="../../Images/instagram-icon.jpg" alt="Instagram Icon"></a>
+                <a href="#"><img src="../../Images/facebook-icon.png" alt="Facebook Icon"></a>
+                <a href="#"><img src="../../Images/google-icon.jpg" alt="Google Plus Icon"></a>
+                <a href="#"><img src="../../Images/youtube-icon.png" alt="YouTube Icon"></a>
             </div>
             <div class="footer-links">
                 <a href="#">About</a>
@@ -52,11 +52,8 @@
         </div>
     </footer>
 
-    <script>
-        function handleSubmit(event) {
-            event.preventDefault(); // Prevent the form from submitting
-            alert('Your taxi is booked!');
-        }
-    </script>
+    
+       <script src="/scripts/taxi/checkout.js"></script>
+    <
 </body>
 </html>
