--- a/pages/taxi_booking/checkout.html
+++ b/pages/taxi_booking/checkout.html
@@ -23,10 +23,10 @@
         <section class="checkout-section">
             <h2>Checkout</h2>
             <form class="checkout-form" onsubmit="handleSubmit(event)">
-                <input type="text" placeholder="First Name" required>
-                <input type="text" placeholder="Last Name" required>
-                <input type="email" placeholder="Email" required>
-                <input type="tel" placeholder="Phone Number" required>
+                <input type="text" id="first-name" placeholder="First Name" required>
+                <input type="text" id="last-name" placeholder="Last Name" required>
+                <input type="email" id="email" placeholder="Email" required>
+                <input type="tel" id="phone" placeholder="Phone Number" required>
                 <button type="submit">Confirm</button>
             </form>
         </section>
@@ -51,9 +51,7 @@
             </div>
         </div>
     </footer>
-
-    
-       <script src="/scripts/taxi/checkout.js"></script>
-    <
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/scripts/taxi/checkout.js"></script>
 </body>
 </html>
