Removed Airplanes Management link, renamed Airports Management link to airportManagement.html in admin.html and taxiCarsManagement.html

--- a/pages/admin/taxiCarsManagement.html
+++ b/pages/admin/taxiCarsManagement.html
@@ -38,12 +38,7 @@
           >
         </li>
         <li>
-          <a href="airplanes_management.html"
-            ><i class="fa-solid fa-plane"></i> Airplanes Management</a
-          >
-        </li>
-        <li>
-          <a href="airports_management.html"
+          <a href="airportManagement.html"
             ><i class="fa-solid fa-plane-departure"></i> Airports Management</a
           >
         </li>
