--- a/pages/admin/airportManagement.html
+++ b/pages/admin/airportManagement.html
@@ -54,19 +54,17 @@
       </ul>
     </div>
     <div class="main-content">
-      <h2>Taxi Company Management</h2>
+      <h2>Airports Management</h2>
       <p class="buttonP">
-        Add a new taxi company:
+        Add a new Airport:
         <button class="main-btn" id="createBtn">Add here</button>
       </p>
       <table>
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Company Name</th>
-            <th>Company Address</th>
-            <th>Company Phone Number</th>
-            <th>Company Email</th>
+            <th>Airport_ID</th>
+            <th>Airport_Name</th>
+            <th>Airport_Location</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -77,40 +75,24 @@
     <div id="popupModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Add New Taxi Company</h2>
-        <form id="addCompanyForm">
-          <label for="companyName">Company Name:</label>
+        <h2>Add New Airport</h2>
+        <form id="addAirportForm">
+          <label for="airportName">Airport Name:</label>
           <input
             type="text"
-            id="companyName"
-            name="companyName"
+            id="airportName"
+            name="airportName"
             required
           /><br />
-          <label for="companyNumber">Company Number:</label>
+          <label for="airportLocation">Airport Location:</label>
           <input
             type="text"
-            id="companyNumber"
-            name="companyNumber"
-            required
-          /><br />
-          <label for="companyEmail">Company Email:</label>
-          <input
-            type="email"
-            id="companyEmail"
-            name="companyEmail"
-            required
-          /><br />
-          <label for="companyAddress">Company Address:</label>
-          <input
-            type="text"
-            id="companyAddress"
-            name="companyAddress"
+            id="airportLocation"
+            name="airportLocation"
             required
           /><br />
           <div class="modalBtn">
-            <button type="submit" class="main-btn modalBtn">
-              Add Taxi Company
-            </button>
+            <button type="submit" class="main-btn modalBtn">Add Airport</button>
           </div>
         </form>
       </div>
@@ -130,46 +112,32 @@
     <div id="updateModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Update Taxi Company</h2>
-        <form id="updateCompanyForm">
-          <input type="hidden" id="updateCompanyId" name="companyId" />
-          <label for="updateCompanyName">Company Name:</label>
+        <h2>Update Airport</h2>
+        <form id="updateAirportForm">
+          <input type="hidden" id="updateAirportId" name="airportId" />
+          <label for="updateAirportName">Airport Name:</label>
           <input
             type="text"
-            id="updateCompanyName"
-            name="companyName"
+            id="updateAirportName"
+            name="airportName"
             required
           /><br />
-          <label for="updateCompanyNumber">Company Number:</label>
+          <label for="updateAirportLocation">Airport Location:</label>
           <input
             type="text"
-            id="updateCompanyNumber"
-            name="companyNumber"
-            required
-          /><br />
-          <label for="updateCompanyEmail">Company Email:</label>
-          <input
-            type="email"
-            id="updateCompanyEmail"
-            name="companyEmail"
-            required
-          /><br />
-          <label for="updateCompanyAddress">Company Address:</label>
-          <input
-            type="text"
-            id="updateCompanyAddress"
-            name="companyAddress"
+            id="updateAirportLocation"
+            name="airportLocation"
             required
           /><br />
           <div class="modalBtn">
             <button type="submit" class="main-btn modalBtn">
-              Update Taxi Company
+              Update Airport
             </button>
           </div>
         </form>
       </div>
     </div>
 
-    <script src="../../scripts/admin.js"></script>
+    <script src="../../scripts/airport.js"></script>
   </body>
 </html>
