--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="../../scripts/admin.js"></script>
   </head>
   <body>
     <div class="sidebar">
@@ -169,7 +170,5 @@
         </form>
       </div>
     </div>
-
-    <script src="../../scripts/admin.js"></script>
   </body>
 </html>
