fixed errors and redunduncy

--- a/pages/admin/taxiCarsManagement.html
+++ b/pages/admin/taxiCarsManagement.html
@@ -22,6 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <script type="module" src="../../scripts/taxiManagement.js"></script>
   </head>
   <body>
     <div class="sidebar">
@@ -180,7 +181,5 @@
         $("#updateTaxiCompany").select2();
       });
     </script>
-
-    <script src="../../scripts/taxiManagement.js"></script>
   </body>
 </html>
