fixed errors and finilized testing

--- a/pages/login.html
+++ b/pages/login.html
@@ -13,8 +13,8 @@
       <form class="login-form">
         <h2>Welcome Aboard</h2>
         <div class="input-group">
-          <input type="text" id="username" required />
-          <label for="username">Username</label>
+          <input type="text" id="email" required />
+          <label for="email">email</label>
           <i class="icon user-icon"></i>
         </div>
         <div class="input-group">
